<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/InicioActivityLayout"
    tools:context=".InicioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/encabezado_principal"
                android:textColor="@color/negro"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hing_principal"
                android:gravity="center"
                android:id="@+id/ET_Main_Nickname"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/pregunta_principal"
                android:textColor="@color/negro"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:background="@color/fondo_boton"
                android:drawableLeft="@mipmap/ic_launcher_wifi"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/wifi"
                android:textColor="@color/Texto_boton"
                android:gravity="center_vertical"
                android:onClick="wifi"/>
            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="350dp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/GET_UBIC"/>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>