<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/person_photo"
                    android:src="@drawable/user2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AGREGAR"/>
                <Switch
                    android:id="@+id/sw_agregado"
                    android:layout_width="wrap_content"
                    android:textOn="@string/confirmar"
                    android:textOff="@string/negar"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/name_tv"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ip_tv"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_below="@+id/name_tv"
                    />
            </LinearLayout>
            <ImageButton
                android:id="@+id/img_btn_mapa"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:background="@color/blue"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mapa" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>